--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".OrderActivity" />
         <activity android:name=".CartActivity" />
         <activity android:name=".StoreActivity" />
-        <activity android:name=".ProductActivity"></activity>
+        <activity android:name=".ProductActivity" />
+        <activity android:name=".CheckoutActivity"></activity>
     </application>
 
 </manifest>
