--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".CartActivity" />
         <activity android:name=".StoreActivity" />
         <activity android:name=".ProductActivity" />
-        <activity android:name=".CheckoutActivity"></activity>
+        <activity android:name=".CheckoutActivity" />
+        <activity android:name=".PastOrdersActivity"></activity>
     </application>
 
 </manifest>
